force-app/main/default/objects/Evidence__c/fields/Trachea__c.field-meta.xml
<CustomField>
    <fullName>Trachea__c</fullName>
    <defaultValue>&quot;There is a small volume of frothy white fluid lining the lumen and diameter of the trachea is consistent throughout. Mucosa is grossly smooth with no overt masses, lesions, or foreign material.&quot;</defaultValue>
    <label>Trachea</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>