force-app/main/default/objects/Evidence__c/fields/Trachea_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Trachea_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trachea Finalized</label>
    <type>Checkbox</type>
</CustomField>