force-app/main/default/objects/Evidence__c/fields/Transverse_Colon__c.field-meta.xml
<CustomField>
    <fullName>Transverse_Colon__c</fullName>
    <defaultValue>&apos;Mucosa intact, no palpable irregularities and the diameter of the lumen is uniform throughout. Serosal and mucosal surface are smooth and shiny with no lesions or parasites overtly appreciated.&apos;</defaultValue>
    <label>Transverse Colon</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>