force-app/main/default/objects/Evidence__c/fields/Transverse_Colon_Contents__c.field-meta.xml
<CustomField>
    <fullName>Transverse_Colon_Contents__c</fullName>
    <label>Transverse Colon Contents</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>