force-app/main/default/objects/Evidence__c/fields/Transverse_Colon_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Transverse_Colon_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transverse Colon Finalized</label>
    <type>Checkbox</type>
</CustomField>