force-app/main/default/objects/Evidence__c/fields/Ureters__c.field-meta.xml
<CustomField>
    <fullName>Ureters__c</fullName>
    <defaultValue>&quot;Bilateral ureters intact with smooth mucosal surface. The ureters are uniform in diameter with no gross evidence of obstruction.&quot;</defaultValue>
    <label>Ureters</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>