force-app/main/default/objects/Evidence__c/fields/Ureters_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Ureters_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ureters Finalized</label>
    <type>Checkbox</type>
</CustomField>