force-app/main/default/objects/Evidence__c/fields/Urethra__c.field-meta.xml
<CustomField>
    <fullName>Urethra__c</fullName>
    <defaultValue>&quot;The urethra is intact with smooth serosal surface with no evidence of obstruction.&quot;</defaultValue>
    <label>Urethra</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>