force-app/main/default/objects/Evidence__c/fields/Urethra_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Urethra_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urethra Finalized</label>
    <type>Checkbox</type>
</CustomField>