force-app/main/default/objects/Evidence__c/fields/Urinary_Bladder__c.field-meta.xml
<CustomField>
    <fullName>Urinary_Bladder__c</fullName>
    <defaultValue>&quot;Mucosa is smooth and shiny. There are no palpable masses, irregularities, stones, or obstructions. Appears subjectively appropriate in size.&quot;</defaultValue>
    <label>Urinary Bladder</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>