force-app/main/default/objects/Evidence__c/fields/Urinary_Bladder_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Urinary_Bladder_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urinary Bladder Finalized</label>
    <type>Checkbox</type>
</CustomField>