force-app/main/default/objects/Evidence__c/fields/Urine_Present__c.field-meta.xml
<CustomField>
    <fullName>Urine_Present__c</fullName>
    <inlineHelpText>How many mLs, urine color, consistency, clarity</inlineHelpText>
    <label>Urine Present</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>