force-app/main/default/objects/Evidence__c/fields/Uterus__c.field-meta.xml
<CustomField>
    <fullName>Uterus__c</fullName>
    <defaultValue>&quot;Appears subjectively appropriate in size with no over masses or lesions. Symmetrical in shape.&quot;</defaultValue>
    <inlineHelpText>Not applicable if altered/unknown</inlineHelpText>
    <label>Uterus</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>