force-app/main/default/objects/Evidence__c/fields/Uterus_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Uterus_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uterus Finalized</label>
    <type>Checkbox</type>
</CustomField>