force-app/main/default/objects/Evidence__c/fields/Vagina__c.field-meta.xml
<CustomField>
    <fullName>Vagina__c</fullName>
    <defaultValue>&quot;Appears subjectively appropriate in size with no overt masses or lesions. Vaginal mucous membranes intact, no overt masses or lesions.&quot;</defaultValue>
    <label>Vagina</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>