force-app/main/default/objects/Evidence__c/fields/Vagina_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Vagina_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vagina Finalized</label>
    <type>Checkbox</type>
</CustomField>