force-app/main/default/objects/Evidence__c/fields/Weight_Unit__c.field-meta.xml
<CustomField>
    <fullName>Weight_Unit__c</fullName>
    <label>Weight Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>Lb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>