force-app/main/default/objects/Evidence__c/recordTypes/Case_Evidence.recordType-meta.xml
<RecordType>
    <fullName>Case_Evidence</fullName>
    <active>true</active>
    <label>Case Evidence</label>
</RecordType>