force-app/main/default/objects/Evidence__c/recordTypes/Case_Evidence_NY.recordType-meta.xml
<RecordType>
    <fullName>Case_Evidence_NY</fullName>
    <active>true</active>
    <label>Case Evidence - NY</label>
</RecordType>