force-app/main/default/objects/Evidence__c/recordTypes/Necropsy.recordType-meta.xml
<RecordType>
    <fullName>Necropsy</fullName>
    <active>false</active>
    <label>Necropsy</label>
</RecordType>