force-app/main/default/objects/Evidence__c/listViews/All_Evidences.listView-meta.xml
<ListView>
    <fullName>All_Evidences</fullName>
    <columns>NAME</columns>
    <columns>Evidence_Category__c</columns>
    <columns>Evidence_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Evidences</label>
</ListView>