force-app/main/default/objects/Evidence__c/listViews/Case_1135.listView-meta.xml
<ListView>
    <fullName>Case_1135</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Animal__c</columns>
    <columns>Evidence_Category__c</columns>
    <columns>Evidence_Type__c</columns>
    <columns>Current_Location__c</columns>
    <columns>Scene_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case__c</field>
        <operation>contains</operation>
        <value>1135</value>
    </filters>
    <label>Case 1135</label>
</ListView>