force-app/main/default/objects/Evidence__c/listViews/New_This_Month.listView-meta.xml
<ListView>
    <fullName>New_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Evidence_Category__c</columns>
    <columns>Evidence_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>New This Month</label>
</ListView>